--- a/app/views/groups/index.html.erb
+++ b/app/views/groups/index.html.erb
@@ -25,6 +25,15 @@
   </div>
 </div>
 
+<div data-module="GuidersAppointmentsCalendar" class="guiders-appointments-calendar" data-config='{ "current_user": 1 }'></div>
+<style>
+[data-resource-id="guider_13"] {
+  background: #fff87c !important;
+}
+</style>
+
+<div data-module="GuiderAppointmentsCalendar"></div>
+
 <div class="row">
   <div class="col-md-6 border-bottom">
     <table class="table">
