--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -8,11 +8,19 @@
   <h1>Edit User "<%=@guider.name %>"</h1>
 </div>
 
-<div data-module="GuiderSchedulesCalendar"></div>
-
 <%= link_to new_user_schedule_path(@guider), class: 'btn btn-primary' do %>
   <span class="glyphicon glyphicon-calendar" aria-hidden="true"></span> Add schedule
 <% end %>
+
+<div class="guider-schedules" data-module="GuiderSchedulesCalendar" aria-hidden="true">
+  <div class="row">
+    <div class="col-md-12 guider-schedules__months"></div>
+  </div>
+  <div class="row guider-schedules__schedules-outer">
+    <div class="guider-schedules__six-week-window"></div>
+    <div class="col-md-12 guider-schedules__schedules"></div>
+  </div>
+</div>
 
 <table class="table table-striped table-bordered table-hover">
   <caption><span class="sr-only">List of guiders</span></caption>
@@ -28,7 +36,7 @@
   </thead>
   <tbody>
   <% @schedules.each do |schedule| %>
-    <tr>
+    <tr data-schedule-start="<%= schedule.start_at %>" data-schedule-end="<%= schedule.end_at %>">
       <td>
         <span class="glyphicon glyphicon-calendar" aria-hidden="true"></span> <%= schedule.title %>
         <% unless schedule.modifiable? %>
